@@ -4,8 +4,6 @@ import org.example.api_attractions.dto.AttractionDTO;
 import org.example.api_attractions.model.Attraction;
 import org.example.api_attractions.model.Category;
 import org.example.api_attractions.repository.AttractionRepository;
-import org.example.api_attractions.service.AttractionService;
-import org.example.api_attractions.service.AttractionServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -13,13 +11,11 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 public class AttractionServiceTest {
@@ -36,74 +32,107 @@ public class AttractionServiceTest {
     }
 
     @Test
-    public void testGetAttractionById() {
-        // Mock data
-        String attractionId = "1";
-        Attraction mockAttraction = new Attraction(
-                "1", "Test Attraction", "Short desc", "Full desc",
-                "Address", 0.0, 0.0);
-        mockAttraction.setCategories(new HashSet<>()); // Ensure categories are initialized
-
-        // Mock behavior
-        when(attractionRepository.findById(attractionId)).thenReturn(Optional.of(mockAttraction));
-
-        // Call the service method
-        AttractionDTO attractionDTO = attractionService.getAttractionById(attractionId);
-
-        // Assertions
-        assertThat(attractionDTO).isNotNull();
-        assertThat(attractionDTO.getId()).isEqualTo(mockAttraction.getId());
-        assertThat(attractionDTO.getName()).isEqualTo(mockAttraction.getName());
-        // Add more assertions for other fields as needed
-    }
-
-    @Test
     public void testGetAllAttractions() {
-        // Mock data
-        Attraction mockAttraction = new Attraction(
-                "1", "Test Attraction", "Short desc", "Full desc",
-                "Address", 0.0, 0.0);
-        Category mockCategory = new Category("1", "Historical");
-        Set<Category> mockCategorySet = new HashSet<Category>();
-        mockCategorySet.add(mockCategory);
-        mockAttraction.setCategories(mockCategorySet); // Ensure categories are initialized
+        // Arrange
+        Category category = new Category("1", "Museum");
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Set.of(category));
 
-        // Mock behavior
-        when(attractionRepository.findAll()).thenReturn(Collections.singletonList(mockAttraction));
+        when(attractionRepository.findAll()).thenReturn(List.of(mockAttraction));
 
-        // Call the service method
-        List<AttractionDTO> attractionDTOs = attractionService.getAllAttractions();
+        // Act
+        List<AttractionDTO> attractions = attractionService.getAllAttractions();
 
-        // Assertions
-        assertThat(attractionDTOs).hasSize(1);
-        AttractionDTO attractionDTO = attractionDTOs.get(0);
-        assertThat(attractionDTO.getId()).isEqualTo(mockAttraction.getId());
-        assertThat(attractionDTO.getName()).isEqualTo(mockAttraction.getName());
-        // Add more assertions for other fields as needed
+        // Assert
+        assertThat(attractions).isNotEmpty();
+        assertThat(attractions.size()).isEqualTo(1);
+        assertThat(attractions.get(0).getName()).isEqualTo("Louvre");
+        assertThat(attractions.get(0).getCategories()).contains("Museum");
     }
 
     @Test
-    public void testGetAttractionByIdProjected() {
-        // Mock data
-        String attractionId = "1";
-        Category category = new Category("1", "Category");
-        Attraction mockAttraction = new Attraction(
-                "1", "Test Attraction", "Short desc", "Full desc",
-                "Address", 0.0, 0.0);
-        mockAttraction.setCategories(Collections.singleton(category));
+    public void testGetAllAttractions_NoCategories() {
+        // Arrange
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Collections.emptySet());
 
-        // Mock behavior
+        when(attractionRepository.findAll()).thenReturn(List.of(mockAttraction));
+
+        // Act
+        List<AttractionDTO> attractions = attractionService.getAllAttractions();
+
+        // Assert
+        assertThat(attractions).isEmpty();
+    }
+
+    @Test
+    public void testGetAttractionsByIds() {
+        // Arrange
+        Category category = new Category("1", "Museum");
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Set.of(category));
+        List<String> attractionIds = List.of("1");
+
+        when(attractionRepository.findByIdIn(attractionIds)).thenReturn(List.of(mockAttraction));
+
+        // Act
+        List<AttractionDTO> attractions = attractionService.getAttractionsByIds(attractionIds);
+
+        // Assert
+        assertThat(attractions).isNotEmpty();
+        assertThat(attractions.size()).isEqualTo(1);
+        assertThat(attractions.get(0).getName()).isEqualTo("Louvre");
+        assertThat(attractions.get(0).getCategories()).contains("Museum");
+    }
+
+    @Test
+    public void testGetAttractionsByIds_NoCategories() {
+        // Arrange
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Collections.emptySet());
+        List<String> attractionIds = List.of("1");
+
+        when(attractionRepository.findByIdIn(attractionIds)).thenReturn(List.of(mockAttraction));
+
+        // Act
+        List<AttractionDTO> attractions = attractionService.getAttractionsByIds(attractionIds);
+
+        // Assert
+        assertThat(attractions).isEmpty();
+    }
+
+    @Test
+    public void testGetAttractionById() {
+        // Arrange
+        Category category = new Category("1", "Museum");
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Set.of(category));
+        String attractionId = "1";
+
         when(attractionRepository.findById(attractionId)).thenReturn(Optional.of(mockAttraction));
 
-        // Call the service method
-        AttractionDTO attractionDTO = attractionService.getAttractionByIdProjected(attractionId);
+        // Act
+        AttractionDTO attraction = attractionService.getAttractionById(attractionId);
 
-        // Assertions
-        assertThat(attractionDTO).isNotNull();
-        assertThat(attractionDTO.getId()).isEqualTo(mockAttraction.getId());
-        assertThat(attractionDTO.getName()).isEqualTo(mockAttraction.getName());
-        assertThat(attractionDTO.getCategories()).containsExactly(category.getName());
-        // Add more assertions for other fields as needed
+        // Assert
+        assertThat(attraction).isNotNull();
+        assertThat(attraction.getName()).isEqualTo("Louvre");
+        assertThat(attraction.getCategories()).contains("Museum");
+    }
+
+    @Test
+    public void testGetAttractionById_NoCategories() {
+        // Arrange
+        Attraction mockAttraction = new Attraction("1", "Louvre", "Famous museum", "World's largest art museum", "Paris", 48.8606, 2.3376);
+        mockAttraction.setCategories(Collections.emptySet());
+        String attractionId = "1";
+
+        when(attractionRepository.findById(attractionId)).thenReturn(Optional.of(mockAttraction));
+
+        // Act
+        AttractionDTO attraction = attractionService.getAttractionById(attractionId);
+
+        // Assert
+        assertThat(attraction).isNull();
     }
 }
-
